lab1/Test/L1-A-13-26.output
Error Type B at Line 3
Error Type A at Line 9
Error Type A at Line 17
Error Type A at Line 27
Error Type A at Line 29
Error Type A at Line 35
Error Type B at Line 36
Error Type B at Line 44
Error Type B at Line 46
Error Type B at Line 49
